Code/Labs/8/7.adding HTML content to the Application/Deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: static
  name: static
spec:
  replicas: 2
  selector:
    matchLabels:
      app: static
  template:
    metadata:
      labels:
        app: static
    spec:
      containers:
      - image: magalixcorp/static:v1
        imagePullPolicy: IfNotPresent
        name: static
