Code/Labs/8/7.adding HTML content to the Application/Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: static
  name: static-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: static
  type: ClusterIP
